# vvilog-cli

./: Cargo.toml  README.md  install.sh  package.json
.github/workflows/: release.yml
lib/: cli.js  config.js  doctor.js  errors.js  formatter.js  request.js  skills.js  update.js
src/: main.rs
tests/: run-tests.js
